--- a/poa_agents/condenser_agent/.env.example
+++ b/poa_agents/condenser_agent/.env.example
@@ -1,6 +1,6 @@
 # OpenAI Configuration
 OPENAI_API_KEY=sk-your-api-key-here
-LLM_MODEL=gpt-4o
+LLM_MODEL=gpt-4o-mini
 
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
