--- a/poa_agents/legal_search_agent/.env.example
+++ b/poa_agents/legal_search_agent/.env.example
@@ -1,12 +1,12 @@
 # OpenAI Configuration
 OPENAI_API_KEY=sk-your-api-key-here
-LLM_MODEL=gpt-4o
+LLM_MODEL=gpt-4o-mini
 EMBEDDING_MODEL=text-embedding-3-small
 
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
 
-# Search Configuration
+# Retrieval Configuration
 SIMILARITY_THRESHOLD=0.3
 MAX_ARTICLES_PER_ISSUE=5
